VerticalText bug fixed using vertical text alignment rather than  rotating it.

--- a/NVision/css/main.css
+++ b/NVision/css/main.css
@@ -1,24 +1,7 @@
-.css-vertical-text {
-	color:#333;
-	
-	/*writing-mode:tb-rl;	
-	filter: flipv fliph;*/
-	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-	
-	-webkit-transform:rotate(-90deg);
-	-moz-transform:rotate(-90deg);
-	-o-transform: rotate(-90deg);
-	
-	-moz-transform-origin: bottom left;
-	-webkit-transform-origin: bottom left;
-	-o-transform-origin: bottom left;
 
-	white-space:nowrap;
-	display:block;
-	zoom:1;
-}
-
+/*
 	.verticalText{
+		
 		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 		
 		-webkit-transform:rotate(-90deg);
@@ -27,8 +10,16 @@
 		
 		-moz-transform-origin: top left;
 		-webkit-transform-origin: top left;
-		-o-transform-origin: top left;		
+		-o-transform-origin: top left;
+		
+		
 	}
+*/
+
+.verticalText h3{
+    line-height: 1em;
+    width: 0.8em;
+}
 
 
 /* global rules */
@@ -812,6 +803,7 @@
 		/*background-color: #cbd8dc;*/
 		background-image:none;
 		cursor:pointer;
+		white-space:nowrap;
 	}
 	
 	#tableData thead span{
@@ -1347,8 +1339,9 @@
 	#dashBoardView .exchange h3{
 		font-size:2em;
 		color:#fff;	
-		padding:1em 5em;
+		padding:3em 1em;
 		cursor: move;
+		text-align:center;
 	}	
 	
 
